# simple-websocket

./: Cargo.toml  LICENSE  README.md
src/: main.rs  router.rs
static/: echo.html  main.css  pinning.html  shared.js  todo.html
