[package]
name = "websocket-testing"
authors = ["lusamreth"]
edition = "2018"
version = "0.0.1"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix = "0.10.0"
actix-files = "0.4.0"
actix-web-actors = "3.0.0"
serde = "1.0.116" 
serde_json = "1.0.57"
